# ShaderMake

./: .gitignore  CMakeLists.txt  README.md
ShaderMake/: CMakeLists.txt  ShaderMake.cpp
src/: ShaderMake.cpp
